Main body part1 oriented correctly, made button readable.

--- a/styles.css
+++ b/styles.css
@@ -34,6 +34,7 @@ img {
 .container {
     display: flex;
     justify-content: space-between;
+    gap: 10px;
     margin: 24px 48px;
 }
 
@@ -45,14 +46,24 @@ h1, p {
 .left {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
     align-items: flex-start;
-    flex-wrap: wrap;
+    justify-content: space-between;
+    width: 300px;
 }
 
 .right {
     display: flex;
     flex-shrink: 0;
-    width: 400px;
-    height: auto;
+    width: 300px;
+    height: 200px;
+}
+
+.button {
+    background-color: #3882F6;
+    color: white;
+    border-radius: 5px;
+    width: 100px;
+    height: 25px;
+    border: none;
+    padding: 0;
 }
